# HPL

./: .gitignore  Cargo.toml  LOG.md  README.md  REFERENCES.md  THOUGHTS.md  TODO.md  bytecode_test.txt  code.txt  design.md  ir1.txt  ir1.txt.s  ir2.txt  ir2.txt.s  new_interpreter.txt  plan.md  prelude.code  scratchpad.code  simplified_interpreter.md  tetris.wic  todo.md
Design/: Reference problem.md  Regions.md  THOUGHTS.md  Type inference.md
IR_x86_test/: a_rust_file.ll  a_rust_file.rs  cauldron_ir.txt  cauldron_ir.txt.s  rust_ir.txt  rust_ir.txt.s
c_bind_test/: Cargo.toml
c_bind_test/src/: main.rs
cauldron/: .gitignore  Cargo.toml
cauldron/src/: main.rs  test.rs
code/: cycles  infer.code  live_gameloop.code  loader.code  macro.code  memory.code  metaprogramming.code  prelude.code  prelude_llvm.code  quote.code  region.code  scratchpad.code  sdl2.code  sdl2_example.code  sdl_example.code  simple.code  tetris.code  tetris_live.code
code/core/: compiler.code  list.code  prelude.code
code/legacy/: test.code
code/tetris/: events.code  loader.code  tetris.code  window.code
compiler/: Cargo.toml  plan.md
compiler/legacy/: codegen.rs  interpreter.rs  intrinsics.rs  jit.rs  library.rs  tests.rs  typecheck.rs
compiler/legacy/IR_x86_test/: a_rust_file.ll  struct_return_problem.md
compiler/legacy/compiler/: bytecode_vm.rs
compiler/src/: arena.rs  c_interface.rs  code_store.rs  codegen.rs  codegen2.rs  common.rs  compile.rs  compiler.rs  error.rs  expr.rs  graph.rs  infer.rs  inference.rs  inference_constraints.rs  inference_solver.rs  interpret.rs  intrinsics.rs  jit.rs  lexer.rs  lib.rs  llvm_codegen.rs  llvm_compile.rs  main.rs  modules.rs  parser.rs  parser2.rs  repl.rs  structure.rs  test.rs  typecheck.rs  typecheck2.rs  typecheck_prev.rs  types.rs  value.rs  watcher.rs
compiler/src/types/: constraints.rs  mod.rs  references.rs  slots.rs  solver.rs  type_errors.rs  type_graph.rs  types.rs
dlltest/: Cargo.toml
dlltest/src/: lib.rs
legacy/: eval_simple.rs
llvm_test/: Cargo.toml  README.md
llvm_test/src/: main.rs
orcjit/: Cargo.toml
orcjit/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: bytecode_compile.rs  bytecode_vm.rs  c_interface.rs  cauldron.rs  codegen.rs  error.rs  eval.rs  eval_simple.rs  font_render.rs  interpreter.rs  interpreter_old.rs  intrinsics.rs  jit.rs  lexer.rs  library.rs  llvm.rs  main.rs  memory_manager.rs  parser.rs  plan.md  preparse.rs  repl.rs  sdl_live.rs  sdl_simple.rs  test.rs  test_llvm.rs  tests.rs  text_edit.rs  typecheck.rs  utils.rs  value.rs  visual_edit.rs  watcher.rs
