[package]
name = "cauldron"
version = "0.1.0"
authors = ["Andrew R Martin <0andrewmartin0@gmail.com>"]

[dependencies]
byteorder = "1.2.2"
unicode-normalization = "0.1.5"
ropey = "0.6.3"
clipboard = "0.4.6"
rand = "0.5.3"
rustyline = "1.0.0"
notify = "4.0.4"
lazy_static = "1.1.0"

[dependencies.rusttype]
version = "0.5.2"
default-features = false
features = ["gpu_cache"]

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["bundled"]