[package]
name = "cauldron"
version = "0.1.0"
authors = ["Andrew R Martin <0andrewmartin0@gmail.com>"]
edition = "2018"

[dev-dependencies]
rusty-fork = "0.2.1"

[dependencies]
# byteorder = "1.2.2"
# unicode-normalization = "0.1.5"
# ropey = "0.6.3"
# clipboard = "0.4.6"
# rustyline = "4.0.0"
rand = "0.6.4"
notify = "4.0.10"
lazy_static = "1.2.0"
itertools = "0.7.3"
maplit = "1.0.1"
llvm-sys = "80.1.0"
libc = "0.2"
libloading = "0.5"
subprocess = "0.1.18"
bumpalo = "2.6.0"
owning_ref = "0.4"

[dependencies.inkwell]
git = "https://github.com/nepp2/inkwell"
default-features = false
features = ["llvm8-0"]

[dependencies.rusttype]
version = "0.5.2"
default-features = false
features = ["gpu_cache"]

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["bundled"]
